@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-20T08:24:13Z",
+  "timestamp" : "2024-05-20T16:24:42Z",
   "count_outdated" : 745,
   "uniques_outdated" : 364,
-  "count" : 767,
-  "uniques" : 380,
+  "count" : 768,
+  "uniques" : 381,
   "clones" : [
     {
       "timestamp": "2024-05-08T00:00:00Z",
@@ -106,12 +106,12 @@
     },
     {
       "timestamp": "2024-05-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
