@@ -1,5 +1,5 @@
 {
-  "count": 22,
+  "count": 23,
   "uniques": 6,
   "clones": [
     {
@@ -59,8 +59,8 @@
     },
     {
       "timestamp": "2024-05-20T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
