@@ -1,3 +1,12 @@
+2024-05-20T16:24:42Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9161819555 # 290
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-20
+* notice: last 14d: unq all: 6 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 364 745 / 380 767
+* notice: next accum: outdated-unq outdated-all / unq all: 364 745 / 381 768
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2024-05-20]
+
 2024-05-20T08:24:13Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9155792464 # 289
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-20
